k8s/network-policies/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: value-fabric
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
